Add a list of BCCs to each send out email, that can be configured in the environment variables (DALA-4932)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -578,6 +578,7 @@ services:
       DATALAND_EMAIL_SERVICE_CLIENT_SECRET: ${DATALAND_EMAIL_SERVICE_CLIENT_SECRET}
       EMAIL_SERVICE_DB_PASSWORD: ${EMAIL_SERVICE_DB_PASSWORD}
       EMAIL_SERVICE_DRY_RUN: ${EMAIL_SERVICE_DRY_RUN:-false}
+      ADDITIONAL_RECIPIENTS_BCC: ${ADDITIONAL_RECIPIENTS_BCC}
     logging:
       <<: *loki-logging
   email-service-db:
