--- a/environments/.env.template
+++ b/environments/.env.template
@@ -61,6 +61,7 @@ MAILJET_API_SECRET="${MAILJET_API_SECRET}"
 MAILJET_API_ID="${MAILJET_API_ID}"
 EMAIL_SERVICE_DB_PASSWORD="${EMAIL_SERVICE_DB_PASSWORD}"
 EMAIL_SERVICE_DRY_RUN="${EMAIL_SERVICE_DRY_RUN}"
+ADDITIONAL_RECIPIENTS_BCC="${ADDITIONAL_RECIPIENTS_BCC}"
 
 # Variables in connection to the User service
 USER_SERVICE_DB_PASSWORD="${USER_SERVICE_DB_PASSWORD}"
