--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -142,6 +142,7 @@ jobs:
           COMMUNITY_MANAGER_DB_PASSWORD: ${{ secrets.COMMUNITY_MANAGER_DB_PASSWORD }}
           EMAIL_SERVICE_DB_PASSWORD: ${{ secrets.EMAIL_SERVICE_DB_PASSWORD }}
           EMAIL_SERVICE_DRY_RUN: ${{ vars.EMAIL_SERVICE_DRY_RUN }}
+          ADDITIONAL_RECIPIENTS_BCC: ${{ vars.ADDITIONAL_RECIPIENTS_BCC }}
           USER_SERVICE_DB_PASSWORD: ${{ secrets.USER_SERVICE_DB_PASSWORD }}
           PGADMIN_PASSWORD: ${{ secrets.PGADMIN_PASSWORD }}
           KEYCLOAK_DATALAND_ADMIN_VALUE: ${{ secrets.KEYCLOAK_DATALAND_ADMIN_VALUE }}
