--- a/dataland-email-service/src/main/resources/application.properties
+++ b/dataland-email-service/src/main/resources/application.properties
@@ -35,6 +35,7 @@ dataland.keycloak.client-id=dataland-email-service
 dataland.keycloak.client-secret=${DATALAND_EMAIL_SERVICE_CLIENT_SECRET}
 
 dataland.email.service.dry.run=${EMAIL_SERVICE_DRY_RUN:false}
+dataland.email.service.additional-recipients.bcc=${ADDITIONAL_RECIPIENTS_BCC:""}
 
 springdoc.api-docs.version=OPENAPI_3_0
 # Temporary workaround (see https://github.com/OpenAPITools/openapi-generator/issues/10053)
