--- a/dataland-community-manager/src/main/resources/application.properties
+++ b/dataland-community-manager/src/main/resources/application.properties
@@ -27,6 +27,7 @@ dataland.authorization.publiclinks=/actuator/health,/actuator/health/ping,/actua
 dataland.authorization.apikey.enable=true
 dataland.apikeymanager.base-url=http://api-key-manager:8080/api-keys
 dataland.backend.base-url=${INTERNAL_BACKEND_URL:http://backend:8080/api}
+dataland.qaservice.base-url=http://qa-service:8080/qa
 dataland.expose-error-stack-trace-to-api=false
 dataland.keycloak.base-url=http://keycloak:8080/keycloak
 dataland.keycloak.client-id=dataland-community-manager
