--- a/dataland-grafana/provisioning/alerting/alert-rules-template.yaml
+++ b/dataland-grafana/provisioning/alerting/alert-rules-template.yaml
@@ -23,7 +23,7 @@ groups:
                 type: loki
                 uid: P8E80F9AEF21F6940
               editorMode: code
-              expr: count_over_time({service_name=~".+"} |~ "500 Internal Server Error" != "query_hash=" [1m])
+              expr: count_over_time({service_name=~".+", level!="info"} |~ "(?i)(internal server error)" [1m])
               intervalMs: 1000
               maxDataPoints: 43200
               queryType: range
@@ -200,7 +200,7 @@ groups:
                 type: loki
                 uid: P8E80F9AEF21F6940
               editorMode: code
-              expr: count_over_time({service_name=~".+"} |~ "(?i)Exception(\\(|:)?" != "query_hash=" [1m])
+              expr: count_over_time({service_name=~".+", level!="info"} |~ "(?i)Exception(\\(|:)?" [1m])
               intervalMs: 1000
               maxDataPoints: 43200
               queryType: range
@@ -287,7 +287,7 @@ groups:
                 type: loki
                 uid: P8E80F9AEF21F6940
               editorMode: code
-              expr: count_over_time({service_name=~".+", job!="health_check"} |~ "(?i)error" != "query_hash=" [1m])
+              expr: count_over_time({service_name=~".+", job!="health_check", level!="info"} |~ "(?i)error" [1m])
               intervalMs: 1000
               maxDataPoints: 43200
               queryType: range
