test if the buffering is involved

--- a/dataland-inbound-proxy/config/utils/cachingProxy.conf
+++ b/dataland-inbound-proxy/config/utils/cachingProxy.conf
@@ -1,5 +1,5 @@
 include utils/proxy.conf;
-proxy_buffering        on;
+proxy_buffering        off;
 proxy_cache            STATIC;
 proxy_cache_valid      200  30d;
 proxy_cache_use_stale  error timeout invalid_header updating
