see if request buffering is responsible

--- a/dataland-inbound-proxy/config/utils/cachingProxy.conf
+++ b/dataland-inbound-proxy/config/utils/cachingProxy.conf
@@ -1,4 +1,5 @@
 include utils/proxy.conf;
+proxy_request_buffering off;
 proxy_buffering        off;
 proxy_cache            STATIC;
 proxy_cache_valid      200  30d;
