--- a/dataland-inbound-proxy/config/utils/cachingProxy.conf
+++ b/dataland-inbound-proxy/config/utils/cachingProxy.conf
@@ -1,6 +1,5 @@
 include utils/proxy.conf;
-proxy_request_buffering off;
-proxy_buffering        off;
+proxy_buffering        on;
 proxy_cache            STATIC;
 proxy_cache_valid      200  30d;
 proxy_cache_use_stale  error timeout invalid_header updating
