--- a/dataland-inbound-proxy/config/utils/proxy.conf
+++ b/dataland-inbound-proxy/config/utils/proxy.conf
@@ -9,7 +9,13 @@ proxy_set_header X-Forwarded-Proto $scheme;
 proxy_set_header X-Forwarded-Host  $host;
 proxy_set_header X-Forwarded-Port  $server_port;
 
+# Proxy limits (Increased from default to fix 502 Bad gateway on KeyCloak registration)
+# https://groups.google.com/g/keycloak-user/c/sd1JwHbE_NA?pli=1
+proxy_buffer_size 128k;
+proxy_buffers 4 256k;
+proxy_busy_buffers_size 256k;
+
 # Proxy timeouts
-proxy_connect_timeout              120s;
-proxy_send_timeout                 120s;
-proxy_read_timeout                 120s;
+proxy_connect_timeout              60s;
+proxy_send_timeout                 60s;
+proxy_read_timeout                 60s;
