Addressed remaining review comments.

--- a/dataland-community-manager/src/main/resources/application.properties
+++ b/dataland-community-manager/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.jpa.open-in-view=false
 spring.datasource.hikari.maximum-pool-size=50
 dataland.authorization.publiclinks=/actuator/health,/actuator/health/ping,/actuator/info,/swagger-ui/**,/v3/api-docs/**,/company-role-assignments/**,/company-ownership/**
 dataland.authorization.apikey.enable=true
+dataland.apikeymanager.base-url=http://api-key-manager:8080/api-keys
 dataland.backend.base-url=${INTERNAL_BACKEND_URL:http://backend:8080/api}
 dataland.qaservice.base-url=http://qa-service:8080/qa
 dataland.expose-error-stack-trace-to-api=false
