--- a/localContainer.conf
+++ b/localContainer.conf
@@ -1,9 +1,7 @@
 proxy
+admin-proxy
+backend-db
 internal-storage
 keycloak
+pgadmin
 rabbitmq
-backend-db
-admin-proxy
-document-manager
-qa-service
-community-manager
