--- a/dataland-frontend/package.json
+++ b/dataland-frontend/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite --debug transform",
+    "dev": "vite",
+    "analyse": "vite --debug transform",
     "build": "vite build",
     "format": "prettier --write .",
     "formatci": "prettier --check .",
