Set up flyway in User Service, remove frameworks field from portfolio-related classes.

--- a/dataland-user-service/src/main/resources/application-development.properties
+++ b/dataland-user-service/src/main/resources/application-development.properties
@@ -6,5 +6,6 @@ springdoc.swagger-ui.doc-expansion=true
 dataland.expose-error-stack-trace-to-api=true
 dataland.apikeymanager.base-url=https://local-dev.dataland.com/api-keys
 dataland.backend.base-url=https://local-dev.dataland.com/api
+spring.flyway.url=jdbc:postgresql://127.0.0.1:5441/user_service
 spring.rabbitmq.host=localhost
 dataland.keycloak.base-url=https://local-dev.dataland.com/keycloak
