--- a/dataland-user-service/src/main/resources/application.properties
+++ b/dataland-user-service/src/main/resources/application.properties
@@ -34,6 +34,12 @@ dataland.keycloak.base-url=http://keycloak:8080/keycloak
 dataland.keycloak.client-id=dataland-user-service
 dataland.keycloak.client-secret=${DATALAND_USER_SERVICE_CLIENT_SECRET}
 
+spring.flyway.url=jdbc:postgresql://user-service-db:5432/user_service
+spring.flyway.user=user_service
+spring.flyway.password=${USER_SERVICE_DB_PASSWORD}
+spring.flyway.baseline-on-migrate=true
+spring.flyway.schemas=public
+
 spring.main.allow-bean-definition-overriding=true
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.virtual-host=vhost
