--- a/dataland-inbound-proxy/config/nginx.conf
+++ b/dataland-inbound-proxy/config/nginx.conf
@@ -13,15 +13,16 @@ events {
 }
 
 http {
-    charset                utf-8;
-    sendfile               on;
-    tcp_nopush             on;
-    tcp_nodelay            on;
-    server_tokens          off;
-    log_not_found          off;
-    types_hash_max_size    2048;
-    types_hash_bucket_size 64;
-    client_max_body_size   16M;
+    charset                    utf-8;
+    sendfile                   on;
+    tcp_nopush                 on;
+    tcp_nodelay                on;
+    server_tokens              off;
+    log_not_found              off;
+    types_hash_max_size        2048;
+    types_hash_bucket_size     64;
+    client_max_body_size       16M;
+    large_client_header_buffers 8 100k;
 
     # MIME
     include                mime.types;
