--- a/dataland-backend/src/main/resources/application.properties
+++ b/dataland-backend/src/main/resources/application.properties
@@ -8,6 +8,7 @@ management.info.git.mode=FULL
 server.tomcat.threads.min-spare=100
 server.shutdown=graceful
 server.servlet.context-path=/api
+server.max-http-request-header-size=1MB
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${PROXY_PRIMARY_URL:local-dev.dataland.com}/keycloak/realms/datalandsecurity
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/keycloak/realms/datalandsecurity/protocol/openid-connect/certs
 dataland.authorization.publiclinks=/actuator/health,/actuator/health/ping,/actuator/info,/swagger-ui/**,/v3/api-docs/**,/companies/**,/data/**,/metadata,/metadata/**
