add chainable visitAndCheckExternalAdminPage for admin-tools tests and chainable waitForPageLoad to wait for a page is loaded before continuing with further testing and add waitUntil cypress method

--- a/dataland-frontend/package.json
+++ b/dataland-frontend/package.json
@@ -53,11 +53,12 @@
     "@vue/test-utils": "2.4.6",
     "@vue/tsconfig": "0.7.0",
     "cypress": "13.17.0",
+    "cypress-wait-until": "^3.0.2",
     "depcheck": "1.4.7",
     "dompurify": "3.2.5",
     "eslint": "9.26.0",
-    "eslint-plugin-jsdoc": "50.6.11",
     "eslint-plugin-cypress": "4.3.0",
+    "eslint-plugin-jsdoc": "50.6.11",
     "eslint-plugin-vue": "10.1.0",
     "git-commit-id": "2.0.1",
     "lint-staged": "15.5.1",
