--- a/dataland-specification-service/src/main/resources/specifications/dataPointTypes/extendedEnumYesNoSustainableOceansAndSeasPolicy.json
+++ b/dataland-specification-service/src/main/resources/specifications/dataPointTypes/extendedEnumYesNoSustainableOceansAndSeasPolicy.json
@@ -1,7 +1,7 @@
 {
   "id" : "extendedEnumYesNoSustainableOceansAndSeasPolicy",
   "name" : "Sustainable Oceans And Seas Policy",
-  "businessDefinition" : "Existence of sustainable oceans or seas practices or policies. See Regulation (EU) 2022/1288, Annex I, table 2, indicator nr. 12.",
+  "businessDefinition" : "Does the company have sustainable oceans or seas practices or policies? (See Regulation (EU) 2022/1288, Annex I, table 2, indicator nr. 12.) If yes, please share the relevant documents with us.",
   "dataPointBaseTypeId" : "extendedEnumYesNo",
   "frameworkOwnership" : [ "sfdr" ],
   "constraints" : null
