--- a/dataland-specification-service/src/main/resources/specifications/dataPointTypes/extendedEnumYesNoWhistleblowerProtectionPolicy.json
+++ b/dataland-specification-service/src/main/resources/specifications/dataPointTypes/extendedEnumYesNoWhistleblowerProtectionPolicy.json
@@ -1,7 +1,7 @@
 {
   "id" : "extendedEnumYesNoWhistleblowerProtectionPolicy",
   "name" : "Whistleblower Protection Policy",
-  "businessDefinition" : "Existence of a policy on the protection of whistleblowers. See Regulation (EU) 2022/1288, Annex I, table 3, indicator nr. 6.",
+  "businessDefinition" : "Does the company have a policy on the protection of whistleblowers? (See Regulation (EU) 2022/1288, Annex I, table 3, indicator nr. 6.) If yes, please share the policy with us.",
   "dataPointBaseTypeId" : "extendedEnumYesNo",
   "frameworkOwnership" : [ "sfdr" ],
   "constraints" : null
