--- a/dataland-specification-service/src/main/resources/specifications/dataPointTypes/extendedEnumYesNoWorkplaceAccidentPreventionPolicy.json
+++ b/dataland-specification-service/src/main/resources/specifications/dataPointTypes/extendedEnumYesNoWorkplaceAccidentPreventionPolicy.json
@@ -1,7 +1,7 @@
 {
   "id" : "extendedEnumYesNoWorkplaceAccidentPreventionPolicy",
   "name" : "Workplace Accident Prevention Policy",
-  "businessDefinition" : "Existence of a workplace accident prevention policy. See Regulation (EU) 2022/1288, Annex I, table 3, indicator nr. 1.",
+  "businessDefinition" : "Does the company have a workplace accident prevention policy? (See Regulation (EU) 2022/1288, Annex I, table 3, indicator nr. 1.) If yes, please share the policy with us.",
   "dataPointBaseTypeId" : "extendedEnumYesNo",
   "frameworkOwnership" : [ "sfdr" ],
   "constraints" : null
