DALA-5634: Changed field names

--- a/dataland-data-exporter/src/main/resources/transformationRules/SfdrSqlServer.config
+++ b/dataland-data-exporter/src/main/resources/transformationRules/SfdrSqlServer.config
@@ -113,32 +113,32 @@ environmental.greenhouseGasEmissions.scope4GhgEmissionsInTonnes.dataSource.page=
 environmental.greenhouseGasEmissions.scope4GhgEmissionsInTonnes.dataSource.tagName=
 environmental.greenhouseGasEmissions.scope4GhgEmissionsInTonnes.dataSource.publicationDate=
 environmental.greenhouseGasEmissions.scope4GhgEmissionsInTonnes.dataSource.fileName=
-environmental.greenhouseGasEmissions.enterpriseValue.value=enterpriseValue.value
-environmental.greenhouseGasEmissions.enterpriseValue.dataSource.page=
-environmental.greenhouseGasEmissions.enterpriseValue.dataSource.fileName=
-environmental.greenhouseGasEmissions.enterpriseValue.dataSource.fileReference=
-environmental.greenhouseGasEmissions.enterpriseValue.dataSource.tagName=
-environmental.greenhouseGasEmissions.enterpriseValue.dataSource.publicationDate=
-environmental.greenhouseGasEmissions.enterpriseValue.comment=
-environmental.greenhouseGasEmissions.enterpriseValue.quality=
-environmental.greenhouseGasEmissions.enterpriseValue.currency=enterpriseValue.currency
-environmental.greenhouseGasEmissions.totalRevenue.value=totalRevenue.value
-environmental.greenhouseGasEmissions.totalRevenue.dataSource.page=
-environmental.greenhouseGasEmissions.totalRevenue.dataSource.fileName=
-environmental.greenhouseGasEmissions.totalRevenue.dataSource.fileReference=
-environmental.greenhouseGasEmissions.totalRevenue.dataSource.tagName=
-environmental.greenhouseGasEmissions.totalRevenue.dataSource.publicationDate=
-environmental.greenhouseGasEmissions.totalRevenue.comment=
-environmental.greenhouseGasEmissions.totalRevenue.quality=
-environmental.greenhouseGasEmissions.totalRevenue.currency=totalRevenue.currency
-environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEURRevenue.value=carbonFootprintInTonnesPerMillionEURRevenue.value
-environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEURRevenue.dataSource.page=
-environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEURRevenue.dataSource.fileName=
-environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEURRevenue.dataSource.fileReference=
-environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEURRevenue.dataSource.tagName=
-environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEURRevenue.dataSource.publicationDate=
-environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEURRevenue.comment=
-environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEURRevenue.quality=
+environmental.greenhouseGasEmissions.enterpriseValueInEUR.value=enterpriseValue.value
+environmental.greenhouseGasEmissions.enterpriseValueInEUR.dataSource.page=
+environmental.greenhouseGasEmissions.enterpriseValueInEUR.dataSource.fileName=
+environmental.greenhouseGasEmissions.enterpriseValueInEUR.dataSource.fileReference=
+environmental.greenhouseGasEmissions.enterpriseValueInEUR.dataSource.tagName=
+environmental.greenhouseGasEmissions.enterpriseValueInEUR.dataSource.publicationDate=
+environmental.greenhouseGasEmissions.enterpriseValueInEUR.comment=
+environmental.greenhouseGasEmissions.enterpriseValueInEUR.quality=
+environmental.greenhouseGasEmissions.enterpriseValueInEUR.currency=enterpriseValueInEUR.currency
+environmental.greenhouseGasEmissions.totalRevenueInEUR.value=totalRevenueInEUR.value
+environmental.greenhouseGasEmissions.totalRevenueInEUR.dataSource.page=
+environmental.greenhouseGasEmissions.totalRevenueInEUR.dataSource.fileName=
+environmental.greenhouseGasEmissions.totalRevenueInEUR.dataSource.fileReference=
+environmental.greenhouseGasEmissions.totalRevenueInEUR.dataSource.tagName=
+environmental.greenhouseGasEmissions.totalRevenueInEUR.dataSource.publicationDate=
+environmental.greenhouseGasEmissions.totalRevenueInEUR.comment=
+environmental.greenhouseGasEmissions.totalRevenueInEUR.quality=
+environmental.greenhouseGasEmissions.totalRevenueInEUR.currency=totalRevenueInEUR.currency
+environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEUREnterpriseValue.value=carbonFootprintInTonnesPerMillionEUREnterpriseValue.value
+environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEUREnterpriseValue.dataSource.page=
+environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEUREnterpriseValue.dataSource.fileName=
+environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEUREnterpriseValue.dataSource.fileReference=
+environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEUREnterpriseValue.dataSource.tagName=
+environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEUREnterpriseValue.dataSource.publicationDate=
+environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEUREnterpriseValue.comment=
+environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEUREnterpriseValue.quality=
 environmental.greenhouseGasEmissions.ghgIntensityInTonnesPerMillionEURRevenue.value=ghgIntensityInTonnesPerMillionEURRevenue.value
 environmental.greenhouseGasEmissions.ghgIntensityInTonnesPerMillionEURRevenue.dataSource.page=
 environmental.greenhouseGasEmissions.ghgIntensityInTonnesPerMillionEURRevenue.dataSource.fileName=
