DALA-5634:Adjusted legacy fields and increased download frequency for testing

--- a/dataland-data-exporter/src/main/resources/transformationRules/SfdrLegacyCsvExportFields.config
+++ b/dataland-data-exporter/src/main/resources/transformationRules/SfdrLegacyCsvExportFields.config
@@ -4,5 +4,5 @@ excessiveCeoPayRatioInPercent.value = social.socialAndEmployeeMatters.excessiveC
 environmental.greenhouseGasEmissions.enterpriseValue.value = environmental.greenhouseGasEmissions.enterpriseValueInEUR.value
 enterpriseValue.currency = "EUR"
 environmental.greenhouseGasEmissions.totalRevenue.value = environmental.greenhouseGasEmissions.totalRevenueInEUR.value
-totalRevenueInEUR.currency = "EUR"
+totalRevenue.currency = "EUR"
 environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEURRevenue.value = environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEUREnterpriseValue.value
