DALA-5634: Adjusted enterprise Value in EUR

--- a/dataland-data-exporter/src/main/resources/transformationRules/SfdrSqlServer.config
+++ b/dataland-data-exporter/src/main/resources/transformationRules/SfdrSqlServer.config
@@ -113,7 +113,7 @@ environmental.greenhouseGasEmissions.scope4GhgEmissionsInTonnes.dataSource.page=
 environmental.greenhouseGasEmissions.scope4GhgEmissionsInTonnes.dataSource.tagName=
 environmental.greenhouseGasEmissions.scope4GhgEmissionsInTonnes.dataSource.publicationDate=
 environmental.greenhouseGasEmissions.scope4GhgEmissionsInTonnes.dataSource.fileName=
-environmental.greenhouseGasEmissions.enterpriseValueInEUR.value=enterpriseValue.value
+environmental.greenhouseGasEmissions.enterpriseValueInEUR.value=enterpriseValueInEUR.value
 environmental.greenhouseGasEmissions.enterpriseValueInEUR.dataSource.page=
 environmental.greenhouseGasEmissions.enterpriseValueInEUR.dataSource.fileName=
 environmental.greenhouseGasEmissions.enterpriseValueInEUR.dataSource.fileReference=
