DALA-5634: Corrected Legacy Fields

--- a/dataland-data-exporter/src/main/resources/transformationRules/SfdrLegacyCsvExportFields.config
+++ b/dataland-data-exporter/src/main/resources/transformationRules/SfdrLegacyCsvExportFields.config
@@ -1,8 +1,8 @@
 rateOfAccidentsInPercent.value = social.socialAndEmployeeMatters.rateOfAccidents.value
 ceoToEmployeePayGapRatio.value = social.socialAndEmployeeMatters.excessiveCeoPayRatio.value
 excessiveCeoPayRatioInPercent.value = social.socialAndEmployeeMatters.excessiveCeoPayRatio.value
-environmental.greenhouseGasEmissions.enterpriseValue.value = environmental.greenhouseGasEmissions.enterpriseValueInEUR.value
+enterpriseValue.value = environmental.greenhouseGasEmissions.enterpriseValueInEUR.value
 enterpriseValue.currency = "EUR"
-environmental.greenhouseGasEmissions.totalRevenue.value = environmental.greenhouseGasEmissions.totalRevenueInEUR.value
+totalRevenue.value = environmental.greenhouseGasEmissions.totalRevenueInEUR.value
 totalRevenue.currency = "EUR"
-environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEURRevenue.value = environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEUREnterpriseValue.value
+carbonFootprintInTonnesPerMillionEURRevenue.value = environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEUREnterpriseValue.value
