--- a/dataland-data-exporter/src/main/resources/transformationRules/SfdrLegacyCsvExportFields.config
+++ b/dataland-data-exporter/src/main/resources/transformationRules/SfdrLegacyCsvExportFields.config
@@ -1,3 +1,8 @@
 rateOfAccidentsInPercent.value = social.socialAndEmployeeMatters.rateOfAccidents.value
 ceoToEmployeePayGapRatio.value = social.socialAndEmployeeMatters.excessiveCeoPayRatio.value
 excessiveCeoPayRatioInPercent.value = social.socialAndEmployeeMatters.excessiveCeoPayRatio.value
+enterpriseValue.value = environmental.greenhouseGasEmissions.enterpriseValueInEUR.value
+enterpriseValue.currency = "EUR"
+totalRevenue.value = environmental.greenhouseGasEmissions.totalRevenueInEUR.value
+totalRevenue.currency = "EUR"
+carbonFootprintInTonnesPerMillionEURRevenue.value = environmental.greenhouseGasEmissions.carbonFootprintInTonnesPerMillionEUREnterpriseValue.value
