--- a/dataland-frontend/package.json
+++ b/dataland-frontend/package.json
@@ -37,7 +37,7 @@
     "pinia-shared-state": "^1.0.1",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
-    "primevue": "~3.44.0",
+    "primevue": "^4.3.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
