--- a/dataland-frontend/package.json
+++ b/dataland-frontend/package.json
@@ -42,18 +42,18 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@cypress/code-coverage": "3.14.0",
+    "@cypress/code-coverage": "3.14.3",
     "@faker-js/faker": "9.7.0",
     "@tsconfig/node20": "20.1.5",
     "@types/markdown-it": "14.1.2",
-    "@types/node": "22.15.3",
+    "@types/node": "22.15.21",
     "@vitejs/plugin-vue": "5.2.3",
     "@vue/eslint-config-prettier": "10.2.0",
     "@vue/eslint-config-typescript": "14.5.0",
     "@vue/test-utils": "2.4.6",
     "@vue/tsconfig": "0.7.0",
     "cypress": "13.17.0",
-    "cypress-wait-until": "^3.0.2",
+    "cypress-wait-until": "3.0.2",
     "depcheck": "1.4.7",
     "dompurify": "3.2.5",
     "eslint": "9.26.0",
