Add retry mechanism and throttling to GLEIF update.

--- a/dataland-batch-manager/src/main/resources/application-development.properties
+++ b/dataland-batch-manager/src/main/resources/application-development.properties
@@ -7,3 +7,22 @@ dataland.dataland-batch-manager.get-all-northdata-companies.flag-file=./this-fil
 dataland.backend.base-url=https://local-dev.dataland.com/api
 dataland.keycloak.base-url=https://local-dev.dataland.com/keycloak
 dataland.communitymanager.base-url=https://local-dev.dataland.com/community
+
+# RateLimiter configuration
+resilience4j.ratelimiter.instances.apiRateLimiter.limitForPeriod=5
+resilience4j.ratelimiter.instances.apiRateLimiter.limitRefreshPeriod=1s
+resilience4j.ratelimiter.instances.apiRateLimiter.timeoutDuration=500ms
+
+# Resilience4j Retry configuration
+resilience4j.retry.instances.apiRetry.maxAttempts=3
+resilience4j.retry.instances.apiRetry.waitDuration=1s
+# Retry Configuration for API Calls
+# List of exceptions that should trigger retry attempts
+resilience4j.retry.instances.apiRetry.retryExceptions=\
+    ${retry.exception.timeout},\
+    ${retry.exception.client},\
+    ${retry.exception.server}
+# Individual exception definitions
+retry.exception.timeout=java.net.SocketTimeoutException
+retry.exception.client=org.openapitools.client.infrastructure.ClientException
+retry.exception.server=org.dataland.datalandbackend.openApiClient.infrastructure.ServerException
