--- a/dataland-batch-manager/src/main/resources/application.properties
+++ b/dataland-batch-manager/src/main/resources/application.properties
@@ -12,3 +12,22 @@ northdata.download.baseurl=https://files.northdata.com/f/4b6ab8133ed4749c/testda
 
 springdoc.api-docs.version=OPENAPI_3_0
 # Temporary workaround (see https://github.com/OpenAPITools/openapi-generator/issues/10053)
+
+# RateLimiter configuration
+resilience4j.ratelimiter.instances.apiRateLimiter.limitForPeriod=5
+resilience4j.ratelimiter.instances.apiRateLimiter.limitRefreshPeriod=1s
+resilience4j.ratelimiter.instances.apiRateLimiter.timeoutDuration=500ms
+
+# Resilience4j Retry configuration
+resilience4j.retry.instances.apiRetry.maxAttempts=3
+resilience4j.retry.instances.apiRetry.waitDuration=1s
+# Retry Configuration for API Calls
+# List of exceptions that should trigger retry attempts
+resilience4j.retry.instances.apiRetry.retryExceptions=\
+    ${retry.exception.timeout},\
+    ${retry.exception.client},\
+    ${retry.exception.server}
+# Individual exception definitions
+retry.exception.timeout=java.net.SocketTimeoutException
+retry.exception.client=org.openapitools.client.infrastructure.ClientException
+retry.exception.server=org.dataland.datalandbackend.openApiClient.infrastructure.ServerException
