Fixed wrong exception

--- a/dataland-batch-manager/src/main/resources/application-development.properties
+++ b/dataland-batch-manager/src/main/resources/application-development.properties
@@ -9,12 +9,12 @@ dataland.keycloak.base-url=https://local-dev.dataland.com/keycloak
 dataland.communitymanager.base-url=https://local-dev.dataland.com/community
 
 # RateLimiter configuration
-resilience4j.ratelimiter.instances.apiRateLimiter.limitForPeriod=5
+resilience4j.ratelimiter.instances.apiRateLimiter.limitForPeriod=1000
 resilience4j.ratelimiter.instances.apiRateLimiter.limitRefreshPeriod=1s
 resilience4j.ratelimiter.instances.apiRateLimiter.timeoutDuration=500ms
 
 # Resilience4j Retry configuration
-resilience4j.retry.instances.apiRetry.maxAttempts=3
+resilience4j.retry.instances.apiRetry.maxAttempts=5
 resilience4j.retry.instances.apiRetry.waitDuration=1s
 # Retry Configuration for API Calls
 # List of exceptions that should trigger retry attempts
@@ -24,5 +24,5 @@ resilience4j.retry.instances.apiRetry.retryExceptions=\
     ${retry.exception.server}
 # Individual exception definitions
 retry.exception.timeout=java.net.SocketTimeoutException
-retry.exception.client=org.openapitools.client.infrastructure.ClientException
+retry.exception.client=org.dataland.datalandbackend.openApiClient.infrastructure.ClientException
 retry.exception.server=org.dataland.datalandbackend.openApiClient.infrastructure.ServerException
