--- a/dataland-batch-manager/src/main/resources/application.properties
+++ b/dataland-batch-manager/src/main/resources/application.properties
@@ -14,12 +14,12 @@ springdoc.api-docs.version=OPENAPI_3_0
 # Temporary workaround (see https://github.com/OpenAPITools/openapi-generator/issues/10053)
 
 # RateLimiter configuration
-resilience4j.ratelimiter.instances.apiRateLimiter.limitForPeriod=5
+resilience4j.ratelimiter.instances.apiRateLimiter.limitForPeriod=1000
 resilience4j.ratelimiter.instances.apiRateLimiter.limitRefreshPeriod=1s
 resilience4j.ratelimiter.instances.apiRateLimiter.timeoutDuration=500ms
 
 # Resilience4j Retry configuration
-resilience4j.retry.instances.apiRetry.maxAttempts=3
+resilience4j.retry.instances.apiRetry.maxAttempts=5
 resilience4j.retry.instances.apiRetry.waitDuration=1s
 # Retry Configuration for API Calls
 # List of exceptions that should trigger retry attempts
@@ -29,5 +29,5 @@ resilience4j.retry.instances.apiRetry.retryExceptions=\
     ${retry.exception.server}
 # Individual exception definitions
 retry.exception.timeout=java.net.SocketTimeoutException
-retry.exception.client=org.openapitools.client.infrastructure.ClientException
+retry.exception.client=org.dataland.datalandbackend.openApiClient.infrastructure.ClientException
 retry.exception.server=org.dataland.datalandbackend.openApiClient.infrastructure.ServerException
