Update time only retry timeouts

--- a/dataland-batch-manager/src/main/resources/application-development.properties
+++ b/dataland-batch-manager/src/main/resources/application-development.properties
@@ -18,11 +18,4 @@ resilience4j.retry.instances.apiRetry.maxAttempts=5
 resilience4j.retry.instances.apiRetry.waitDuration=1s
 # Retry Configuration for API Calls
 # List of exceptions that should trigger retry attempts
-resilience4j.retry.instances.apiRetry.retryExceptions=\
-    ${retry.exception.timeout},\
-    ${retry.exception.client},\
-    ${retry.exception.server}
-# Individual exception definitions
-retry.exception.timeout=java.net.SocketTimeoutException
-retry.exception.client=org.dataland.datalandbackend.openApiClient.infrastructure.ClientException
-retry.exception.server=org.dataland.datalandbackend.openApiClient.infrastructure.ServerException
+resilience4j.retry.instances.apiRetry.retryExceptions=java.net.SocketTimeoutException
