Implement option for full update by using a flag file

--- a/dataland-batch-manager/src/main/resources/application.properties
+++ b/dataland-batch-manager/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 dataland.keycloak.client-id=dataland-batch-manager
 dataland.keycloak.client-secret=${DATALAND_BATCH_MANAGER_CLIENT_SECRET}
 dataland.dataland-batch-manager.get-all-gleif-companies.flag-file=${GET_ALL_GLEIF_COMPANIES_FLAG_FILE}
+dataland.dataland-batch-manager.get-all-gleif-companies-for-manual-update.flag-file=${GET_ALL_GLEIF_COMPANIES_UPDATE_FLAG_FILE}
 dataland.dataland-batch-manager.get-all-northdata-companies.flag-file=${GET_ALL_NORTHDATA_COMPANIES_FLAG_FILE}
 dataland.backend.base-url=${INTERNAL_BACKEND_URL}
 dataland.communitymanager.base-url=http://community-manager:8080/community
