Readd  flag file update option after keycloak error

--- a/dataland-batch-manager/src/main/resources/application-development.properties
+++ b/dataland-batch-manager/src/main/resources/application-development.properties
@@ -2,6 +2,7 @@ dataland.keycloak.client-id=dataland-batch-manager
 dataland.keycloak.client-secret=password
 dataland.dataland-batch-manager.get-all-gleif-companies.force=false
 dataland.dataland-batch-manager.get-all-gleif-companies.flag-file=./this-file-does-not-exist
+dataland.dataland-batch-manager.get-all-gleif-companies-for-manual-update.flag-file=.this-file-does-not-exist
 dataland.dataland-batch-manager.get-all-northdata-companies.force=false
 dataland.dataland-batch-manager.get-all-northdata-companies.flag-file=./this-file-does-not-exist
 dataland.backend.base-url=https://local-dev.dataland.com/api
