--- a/dataland-user-service/src/main/resources/application.properties
+++ b/dataland-user-service/src/main/resources/application.properties
@@ -30,6 +30,7 @@ spring.datasource.hikari.maximum-pool-size=50
 dataland.authorization.apikey.enable=true
 dataland.apikeymanager.base-url=http://api-key-manager:8080/api-keys
 dataland.backend.base-url=${INTERNAL_BACKEND_URL:http://backend:8080/api}
+dataland.community-manager.base-url=http://community-manager:8080/community
 dataland.keycloak.base-url=http://keycloak:8080/keycloak
 dataland.keycloak.client-id=dataland-user-service
 dataland.keycloak.client-secret=${DATALAND_USER_SERVICE_CLIENT_SECRET}
