--- a/versions.properties
+++ b/versions.properties
@@ -10,5 +10,6 @@
 #### NOTE: Some versions are filtered by the rejectVersionIf predicate. See the settings.gradle.kts file.
 
 version.mockito=5.17.0
+##  # available=5.18.0
 
 version.okhttp3=4.12.0
