--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,17 +5,12 @@ io-gitlab-arturbosch-detekt = { id = "io.gitlab.arturbosch.detekt", version.ref 
 com-github-node-gradle-node = { id = "com.github.node-gradle.node", version = "7.1.0" }
 org-springframework-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
 org-jlleitschuh-gradle-ktlint = { id = "org.jlleitschuh.gradle.ktlint", version = "12.2.0" }
-##                                                                           ⬆ = "12.3.0" }
 org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 org-jetbrains-kotlin-plugin-spring = { id = "org.jetbrains.kotlin.plugin.spring", version.ref = "kotlin" }
 org-sonarqube = { id = "org.sonarqube", version = "6.0.1.5171" }
-##                                           ⬆ = "6.1.0.5360" }
-##                                           ⬆ = "6.2.0.5505" }
 org-springdoc-openapi-gradle-plugin = { id = "org.springdoc.openapi-gradle-plugin", version = "1.9.0" }
 com-gorylenko-gradle-git-properties = { id = "com.gorylenko.gradle-git-properties", version = "2.4.2" }
-##                                                                                       ⬆ = "2.5.0" }
 org-openapi-generator = { id = "org.openapi.generator", version = "7.13.0" }
-##                                                           ⬆ = "7.14.0" }
 com-github-ben-manes-versions = { id = "com.github.ben-manes.versions", version = "0.52.0" }
 org-jetbrains-kotlin-plugin-jpa = { id = "org.jetbrains.kotlin.plugin.jpa", version.ref = "kotlin" }
 org-jetbrains-kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
@@ -27,25 +22,25 @@ kotlin = "2.0.0"
 okhttp3 = "4.12.0"
 moshi = "1.15.2"
 mockito = "5.18.0"
-junit-jupiter = "5.13.2"
-log4j = "2.25.0"
+junit-jupiter = "5.12.2"
+log4j = "2.24.3"
 jackson = "2.18.4"
 logback = "1.5.18"
-flyway = "11.10.0"
+flyway = "11.8.2"
 cloudevents = "4.0.1"
 itext = "9.2.0"
 tika = "3.2.0"
 poi = "5.4.1"
 jodconverter = "4.4.9"
 spring-boot = "3.5.3"
-spring-framework = "6.2.8"
+spring-framework = "6.2.7"
 detekt = "1.23.8"
 bouncy-castle = "1.70"
 
 [libraries]
 
 # Gradle
-gradle-tooling = { group = "org.gradle", name = "gradle-tooling-api", version = "8.14.2" }
+gradle-tooling = { group = "org.gradle", name = "gradle-tooling-api", version = "8.14.1" }
 # Detekt
 detekt-cli = { group = "io.gitlab.arturbosch.detekt", name = "detekt-cli", version.ref = "detekt" }
 
@@ -97,13 +92,13 @@ spring-security-crypto = { module = "org.springframework.security:spring-securit
 spring-security-web = { module = "org.springframework.security:spring-security-web" }
 
 # Spring-related
-spring-cloud-function-context = { group = "org.springframework.cloud", name = "spring-cloud-function-context", version = "4.3.0" }
-springdoc-openapi-ui = { group = "org.springdoc", name = "springdoc-openapi-starter-webmvc-ui", version = "2.8.9" }
+spring-cloud-function-context = { group = "org.springframework.cloud", name = "spring-cloud-function-context", version = "4.2.1" }
+springdoc-openapi-ui = { group = "org.springdoc", name = "springdoc-openapi-starter-webmvc-ui", version = "2.8.5" }
 spring-context = { group = "org.springframework", name = "spring-context", version.ref = "spring-framework" }
 spring-test = { group = "org.springframework", name = "spring-test", version.ref = "spring-framework" }
 
 # PostgreSQL
-postgresql = { group = "org.postgresql", name = "postgresql", version = "42.7.7" }
+postgresql = { group = "org.postgresql", name = "postgresql", version = "42.7.5" }
 
 # H2
 h2 = { group = "com.h2database", name = "h2", version = "2.3.232" }
@@ -114,6 +109,7 @@ moshi-adapters = { group = "com.squareup.moshi", name = "moshi-adapters", versio
 
 # Jakarta
 jakarta-servlet-api = { group = "jakarta.servlet", name = "jakarta.servlet-api", version = "6.1.0" }
+jakarta-persistence-api = { group = "jakarta.persistence", name = "jakarta.persistence-api", version = "3.2.0" }
 
 # Bouncy Castle
 bcpkix-jdk15on = { group = "org.bouncycastle", name = "bcpkix-jdk15on", version.ref = "bouncy-castle" }
@@ -144,7 +140,7 @@ junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter", version.r
 awaitility = { group = "org.awaitility", name = "awaitility", version = "4.3.0" }
 
 # JSON
-json = { group = "org.json", name = "json", version = "20250517" }
+json = { group = "org.json", name = "json", version = "20250107" }
 
 # Mailjet
 mailjet-client = { group = "com.mailjet", name = "mailjet-client", version = "5.2.6" }
