Update vite and vitejs

--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
     "cypress-wait-until": "3.0.2"
+  },
+  "dependencies": {
+    "@vitejs/plugin-vue": "^6.0.0",
+    "version": "^0.1.2",
+    "vite-plugin-istanbul": "^7.0.0"
   }
 }
