Remove reduced Stack configs from PR

--- a/dataland-inbound-proxy/config/utils/locations/backendDev.conf
+++ b/dataland-inbound-proxy/config/utils/locations/backendDev.conf
@@ -3,3 +3,7 @@ location /internal-storage/ {
   include utils/proxy.conf;
 }
 
+location /external-storage/ {
+  proxy_pass http://external-storage:8080/external-storage/;
+  include utils/proxy.conf;
+}
