--- a/dataland-inbound-admin-proxy/nginx.conf
+++ b/dataland-inbound-admin-proxy/nginx.conf
@@ -33,13 +33,36 @@ http {
       proxy_set_header X-Forwarded-Host $host;
     }
 
+    location /pgadmin {
+      proxy_set_header X-Script-Name /pgadmin;
+      proxy_set_header X-Scheme $scheme;
+      proxy_set_header Host "dataland-admin:6789";
+      proxy_pass http://pgadmin;
+      proxy_redirect off;
+    }
+
     location /rabbitmq/ {
       proxy_pass http://rabbitmq:15672/;
     }
 
-
     location /health/admin-proxy {
       return 200 'UP';
+    }
+
+    location /grafana/ {
+       rewrite  ^/grafana/(.*)  /$1 break;
+       proxy_set_header Host $http_host;
+       proxy_pass http://grafana:3000;
+    }
+
+    # Proxy Grafana Live WebSocket connections.
+    location /grafana/api/live/ {
+      rewrite  ^/grafana/(.*)  /$1 break;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+      proxy_set_header Host $http_host;
+      proxy_pass http://grafana:3000;
     }
   }
 }
@@ -63,6 +86,16 @@ stream {
     server {
         listen 5434 so_keepalive=on;
         proxy_pass keycloak-db;
+    }
+
+    # API-KEY-MANAGER
+    upstream api-key-manager-db {
+        server api-key-manager-db:5432;
+    }
+
+    server {
+        listen 5435 so_keepalive=on;
+        proxy_pass api-key-manager-db;
     }
 
     # DOCUMENT-MANAGER
@@ -93,6 +126,16 @@ stream {
     server {
         listen 5439 so_keepalive=on;
         proxy_pass community-manager-db;
+    }
+
+    # EMAIL-SERVICE
+    upstream email-service-db {
+        server email-service-db:5432;
+    }
+
+    server {
+        listen 5440 so_keepalive=on;
+        proxy_pass email-service-db;
     }
 
     # USER-SERVICE
