Add missing dependencies; remove explicit icons

--- a/dataland-frontend/package.json
+++ b/dataland-frontend/package.json
@@ -28,8 +28,9 @@
     "@formkit/themes": "^1.6.9",
     "@formkit/vue": "^1.6.9",
     "@ibm/plex": "^6.4.1",
-    "axios": "^1.10.0",
     "@primeuix/themes": "^1.1.1",
+    "@primevue/core": "^4.3.6",
+    "axios": "^1.10.0",
     "currency-codes": "^2.2.0",
     "i18n-iso-countries": "^7.14.0",
     "keycloak-js": "^26.2.0",
