add ES2023.Array to lib

--- a/dataland-frontend/tsconfig.json
+++ b/dataland-frontend/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "files": [], // This is required to override the default import pattern "**/*"
   "compilerOptions": {
-    "module": "NodeNext"
+    "module": "NodeNext",
+    "lib": ["ES2023.Array"]
   },
   "references": [
     {
