--- a/dataland-frontend/tsconfig.json
+++ b/dataland-frontend/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "files": [], // This is required to override the default import pattern "**/*"
   "compilerOptions": {
-    "module": "NodeNext",
-    "lib": ["ES2023.Array"]
+    "module": "NodeNext"
   },
   "references": [
     {
