--- a/dataland-frontend/tsconfig.config.json
+++ b/dataland-frontend/tsconfig.config.json
@@ -7,6 +7,7 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "types": ["node"]
+    "types": ["node"],
+    "lib": ["ES2023.Array"]
   }
 }
