--- a/dataland-backend/src/main/resources/application.properties
+++ b/dataland-backend/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.username=backend
 spring.datasource.password=${BACKEND_DB_PASSWORD}
 spring.datasource.url=jdbc:postgresql://backend-db:5432/backend
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jackson.deserialization.fail-on-unknown-properties=true
 server.error.whitelabel.enabled=false
@@ -60,4 +60,8 @@ spring.flyway.baseline-version=${BACKEND_MIGRATION_BASELINE_VERSION:1}
 
 
 springdoc.api-docs.version=OPENAPI_3_0
+
+# todo: remove before merge
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Temporary workaround (see https://github.com/OpenAPITools/openapi-generator/issues/10053)
