Added isinChunkSize environment variable

--- a/dataland-backend/src/main/resources/application.properties
+++ b/dataland-backend/src/main/resources/application.properties
@@ -65,3 +65,5 @@ springdoc.api-docs.version=OPENAPI_3_0
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # Temporary workaround (see https://github.com/OpenAPITools/openapi-generator/issues/10053)
+
+isin.chunk.size=10
