--- a/dataland-frontend/package.json
+++ b/dataland-frontend/package.json
@@ -39,7 +39,8 @@
     "primeicons": "^7.0.0",
     "primevue": "~3.44.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-tour": "^1.0.3"
   },
   "devDependencies": {
     "@cypress/code-coverage": "3.14.5",
