--- a/dataland-backend/src/main/resources/application.properties
+++ b/dataland-backend/src/main/resources/application.properties
@@ -60,5 +60,6 @@ spring.flyway.baseline-version=${BACKEND_MIGRATION_BASELINE_VERSION:1}
 
 
 springdoc.api-docs.version=OPENAPI_3_0
+# Temporary workaround (see https://github.com/OpenAPITools/openapi-generator/issues/10053)
 
 isin.chunk.size=25
