--- a/dataland-api-key-manager/src/main/resources/application-development.properties
+++ b/dataland-api-key-manager/src/main/resources/application-development.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5435/api_key_manager
 spring.jpa.hibernate.ddl-auto=create
 dataland.expose-error-stack-trace-to-api=true
 server.port=8081
+
+dataland.keycloak.base-url=http://keycloak:8080/keycloak
+dataland.keycloak.client-id=dataland-api-key-manager
+dataland.keycloak.client-secret=${DATALAND_API_KEY_MANAGER_CLIENT_SECRET}
