Fix flyway configuration

--- a/dataland-api-key-manager/src/main/resources/application-development.properties
+++ b/dataland-api-key-manager/src/main/resources/application-development.properties
@@ -8,3 +8,5 @@ server.port=8081
 dataland.keycloak.base-url=http://keycloak:8080/keycloak
 dataland.keycloak.client-id=dataland-api-key-manager
 dataland.keycloak.client-secret=${DATALAND_API_KEY_MANAGER_CLIENT_SECRET}
+
+spring.flyway.url=jdbc:postgresql://api-key-manager-db:5432/api_key_manager
