--- a/dataland-api-key-manager/src/main/resources/application-nodb.properties
+++ b/dataland-api-key-manager/src/main/resources/application-nodb.properties
@@ -6,6 +6,7 @@ spring.datasource.password=password
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 dataland.max-days-selectable-for-api-key-validity=3650
+spring.flyway.enabled=false
 
 dataland.keycloak.base-url=http://keycloak:8080/keycloak
 dataland.keycloak.client-id=dataland-api-key-manager
