Add missing environment variables

--- a/environments/.env.template
+++ b/environments/.env.template
@@ -30,6 +30,7 @@ KEYCLOAK_LINKEDIN_ID=${KEYCLOAK_LINKEDIN_ID}
 KEYCLOAK_LINKEDIN_SECRET=${KEYCLOAK_LINKEDIN_SECRET}
 DATALAND_BATCH_MANAGER_CLIENT_SECRET=${DATALAND_BATCH_MANAGER_CLIENT_SECRET}
 DATALAND_COMMUNITY_MANAGER_CLIENT_SECRET=${DATALAND_COMMUNITY_MANAGER_CLIENT_SECRET}
+DATALAND_API_KEY_MANAGER_CLIENT_SECRET=${DATALAND_API_KEY_MANAGER_CLIENT_SECRET}
 DATALAND_DOCUMENT_MANAGER_CLIENT_SECRET=${DATALAND_DOCUMENT_MANAGER_CLIENT_SECRET}
 DATALAND_BACKEND_CLIENT_SECRET=${DATALAND_BACKEND_CLIENT_SECRET}
 DATALAND_DATA_EXPORTER_CLIENT_SECRET=${DATALAND_DATA_EXPORTER_CLIENT_SECRET}
