--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -148,6 +148,7 @@ jobs:
           KEYCLOAK_DATALAND_ADMIN_VALUE: ${{ secrets.KEYCLOAK_DATALAND_ADMIN_VALUE }}
           KEYCLOAK_DATALAND_ADMIN_SALT: ${{ secrets.KEYCLOAK_DATALAND_ADMIN_SALT }}
           DATALAND_BATCH_MANAGER_CLIENT_SECRET: ${{ secrets.DATALAND_BATCH_MANAGER_CLIENT_SECRET }}
+          DATALAND_API_KEY_MANAGER_CLIENT_SECRET: ${{ secrets.DATALAND_API_KEY_MANAGER_CLIENT_SECRET }}
           DATALAND_QA_SERVICE_CLIENT_SECRET: ${{ secrets.DATALAND_QA_SERVICE_CLIENT_SECRET }}
           DATALAND_COMMUNITY_MANAGER_CLIENT_SECRET: ${{ secrets.DATALAND_COMMUNITY_MANAGER_CLIENT_SECRET }}
           DATALAND_DOCUMENT_MANAGER_CLIENT_SECRET: ${{ secrets.DATALAND_DOCUMENT_MANAGER_CLIENT_SECRET }}
