--- a/dataland-api-key-manager/src/main/resources/application-development.properties
+++ b/dataland-api-key-manager/src/main/resources/application-development.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5435/api_key_manager
 spring.jpa.hibernate.ddl-auto=create
 dataland.expose-error-stack-trace-to-api=true
 server.port=8081
+
+spring.flyway.url=jdbc:postgresql://127.0.0.1:5435/api_key_manager
