--- a/dataland-api-key-manager/src/main/resources/application-nodb.properties
+++ b/dataland-api-key-manager/src/main/resources/application-nodb.properties
@@ -6,3 +6,4 @@ spring.datasource.password=password
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 dataland.max-days-selectable-for-api-key-validity=3650
+spring.flyway.enabled=false
