--- a/dataland-api-key-manager/src/main/resources/application.properties
+++ b/dataland-api-key-manager/src/main/resources/application.properties
@@ -27,5 +27,15 @@ dataland.max-days-selectable-for-api-key-validity=${MAX_NUMBER_OF_DAYS_SELECTABL
 spring.jpa.open-in-view=false
 spring.datasource.hikari.maximum-pool-size=50
 
+dataland.keycloak.base-url=http://keycloak:8080/keycloak
+dataland.keycloak.client-id=dataland-api-key-manager
+dataland.keycloak.client-secret=${DATALAND_API_KEY_MANAGER_CLIENT_SECRET}
+
+spring.flyway.url=jdbc:postgresql://api-key-manager-db:5432/api_key_manager
+spring.flyway.user=api_key_manager
+spring.flyway.password=${API_KEY_MANAGER_DB_PASSWORD}
+spring.flyway.baseline-on-migrate=true
+spring.flyway.schemas=public
+
 springdoc.api-docs.version=OPENAPI_3_0
 # Temporary workaround (see https://github.com/OpenAPITools/openapi-generator/issues/10053)
