DALA-6012: Simplify ISIN Treatment (#1333)
---------

Co-authored-by: AlexanderBors <137779015+AlexanderBors@users.noreply.github.com>
Co-authored-by: Wiebke Luenemann <208935942+WiebkeLuenemann-df@users.noreply.github.com>
Co-authored-by: SiegfriedSobkowiak <71646830+SiegfriedSobkowiak@users.noreply.github.com>
Co-authored-by: Stephan Wezorke <186339469+StephanWezorke@users.noreply.github.com>

--- a/dataland-backend/src/main/resources/application.properties
+++ b/dataland-backend/src/main/resources/application.properties
@@ -20,6 +20,8 @@ spring.datasource.url=jdbc:postgresql://backend-db:5432/backend
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.batch_size=100
+spring.jpa.properties.hibernate.order_inserts=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
 server.error.whitelabel.enabled=false
 spring.mvc.log-resolved-exception=true
@@ -61,3 +63,5 @@ spring.flyway.baseline-version=${BACKEND_MIGRATION_BASELINE_VERSION:1}
 
 springdoc.api-docs.version=OPENAPI_3_0
 # Temporary workaround (see https://github.com/OpenAPITools/openapi-generator/issues/10053)
+
+isin.chunk.size=25
