--- a/dataland-frontend/package.json
+++ b/dataland-frontend/package.json
@@ -72,6 +72,7 @@
     "sass": "1.90.0",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
+    # Mark as manually blocked
     "typescript": "5.9.2",
     "vite": "6.3.5",
     "vite-plugin-istanbul": "7.1.0",
