Add updated flyway scripts and change hibernate in application properties

--- a/dataland-backend/src/main/resources/application.properties
+++ b/dataland-backend/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.datasource.password=${BACKEND_DB_PASSWORD}
 spring.datasource.url=jdbc:postgresql://backend-db:5432/backend
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.batch_size=100
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jackson.deserialization.fail-on-unknown-properties=true
