--- a/environments/.env.template
+++ b/environments/.env.template
@@ -31,12 +31,16 @@ KEYCLOAK_LINKEDIN_SECRET=${KEYCLOAK_LINKEDIN_SECRET}
 DATALAND_BATCH_MANAGER_CLIENT_SECRET=${DATALAND_BATCH_MANAGER_CLIENT_SECRET}
 DATALAND_COMMUNITY_MANAGER_CLIENT_SECRET=${DATALAND_COMMUNITY_MANAGER_CLIENT_SECRET}
 DATALAND_API_KEY_MANAGER_CLIENT_SECRET=${DATALAND_API_KEY_MANAGER_CLIENT_SECRET}
+DATALAND_DATA_SOURCING_SERVICE_CLIENT_SECRET=${DATALAND_DATA_SOURCING_SERVICE_CLIENT_SECRET}
 DATALAND_DOCUMENT_MANAGER_CLIENT_SECRET=${DATALAND_DOCUMENT_MANAGER_CLIENT_SECRET}
 DATALAND_BACKEND_CLIENT_SECRET=${DATALAND_BACKEND_CLIENT_SECRET}
 DATALAND_DATA_EXPORTER_CLIENT_SECRET=${DATALAND_DATA_EXPORTER_CLIENT_SECRET}
 
 # Variables in connection to the API-Key-Manager service
 API_KEY_MANAGER_DB_PASSWORD="${API_KEY_MANAGER_DB_PASSWORD}"
+
+# Variables in connection to the Data-Sourcing service
+DATA_SOURCING_SERVICE_DB_PASSWORD="${DATA_SOURCING_SERVICE_DB_PASSWORD}"
 
 # Variables in connection to the Internal-Storage service
 INTERNAL_STORAGE_DB_PASSWORD="${INTERNAL_STORAGE_DB_PASSWORD}"
