--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -223,6 +223,7 @@ jobs:
           DATALAND_DOCUMENT_MANAGER_CLIENT_SECRET: "password"
           DATALAND_EMAIL_SERVICE_CLIENT_SECRET: "password"
           DATALAND_API_KEY_MANAGER_CLIENT_SECRET: "password"
+          DATALAND_DATA_SOURCING_SERVICE_CLIENT_SECRET: "password"
           DATALAND_USER_SERVICE_CLIENT_SECRET: "password"
       - name: Frontend linting
         run: ./gradlew :dataland-frontend:generateClients :dataland-frontend:npm_run_lintci :dataland-frontend:npm_run_formatci :dataland-frontend:npm_run_checkdependencies --no-daemon --stacktrace
