--- a/dataland-data-sourcing-service/src/main/resources/application-development.properties
+++ b/dataland-data-sourcing-service/src/main/resources/application-development.properties
@@ -1,8 +1,8 @@
-#spring.security.oauth2.resourceserver.jwt.issuer-uri=https://local-dev.dataland.com/keycloak/realms/datalandsecurity
-#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://local-dev.dataland.com/keycloak/realms/datalandsecurity/protocol/openid-connect/certs
-#spring.datasource.url=jdbc:postgresql://127.0.0.1:5435/api_key_manager
-#spring.jpa.hibernate.ddl-auto=create
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://local-dev.dataland.com/keycloak/realms/datalandsecurity
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://local-dev.dataland.com/keycloak/realms/datalandsecurity/protocol/openid-connect/certs
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5435/data_sourcing_service
+spring.jpa.hibernate.ddl-auto=create
 dataland.expose-error-stack-trace-to-api=true
 server.port=8081
 
-#spring.flyway.url=jdbc:postgresql://127.0.0.1:5435/api_key_manager
+spring.flyway.url=jdbc:postgresql://127.0.0.1:5435/data_sourcing_service
