--- a/dataland-data-sourcing-service/src/main/resources/application.properties
+++ b/dataland-data-sourcing-service/src/main/resources/application.properties
@@ -12,9 +12,9 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${PROXY_PRIMARY_URL
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://keycloak:8080/keycloak/realms/datalandsecurity/protocol/openid-connect/certs
 dataland.authorization.publiclinks=/actuator/health,/actuator/health/ping,/actuator/info,/swagger-ui/**,/v3/api-docs/**
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.username=data_sourcing_service
-#spring.datasource.password=${API_KEY_MANAGER_DB_PASSWORD}
-#spring.datasource.url=jdbc:postgresql://api-key-manager-db:5432/api_key_manager
+spring.datasource.username=data_sourcing_service
+spring.datasource.password=${DATA_SOURCING_SERVICE_DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://data-sourcing-service-db:5432/data_sourcing_service
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
@@ -26,15 +26,15 @@ dataland.expose-error-stack-trace-to-api=false
 spring.jpa.open-in-view=false
 spring.datasource.hikari.maximum-pool-size=50
 
-#dataland.keycloak.base-url=http://keycloak:8080/keycloak
-#dataland.keycloak.client-id=dataland-data-sourcing-manager
-#dataland.keycloak.client-secret=${DATALAND_API_KEY_MANAGER_CLIENT_SECRET}
+dataland.keycloak.base-url=http://keycloak:8080/keycloak
+dataland.keycloak.client-id=dataland-data-sourcing-service
+dataland.keycloak.client-secret=${DATALAND_DATA_SOURCING_SERVICE_CLIENT_SECRET}
 
-#spring.flyway.url=jdbc:postgresql://api-key-manager-db:5432/api_key_manager
-#spring.flyway.user=api_key_manager
-#spring.flyway.password=${API_KEY_MANAGER_DB_PASSWORD}
-#spring.flyway.baseline-on-migrate=true
-#spring.flyway.schemas=public
+spring.flyway.url=jdbc:postgresql://data-sourcing-service-db:5432/data_sourcing_service
+spring.flyway.user=data_sourcing_service
+spring.flyway.password=${DATA_SOURCING_SERVICE_DB_PASSWORD}
+spring.flyway.baseline-on-migrate=true
+spring.flyway.schemas=public
 
 springdoc.api-docs.version=OPENAPI_3_0
 # Temporary workaround (see https://github.com/OpenAPITools/openapi-generator/issues/10053)
