--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,7 @@ services:
       - backend-db
       - keycloak-db
       - api-key-manager-db
+      - data-sourcing-service-db
       - internal-storage-db
       - document-manager-db
       - qa-service-db
@@ -114,6 +115,39 @@ services:
       PGUSER: api_key_manager
     logging:
       <<: *loki-logging
+  data-sourcing-service:
+        restart: always
+        profiles: [ "production", "testing", "development" ]
+        networks:
+          - internal
+          - data-sourcing-service-db
+        image: ${DATA_SOURCING_SERVICE_IMAGE:-ghcr.io/d-fine/dataland/dataland_data_sourcing_service_test:${DATALAND_DATA_SOURCING_SERVICE_TEST_VERSION}}
+        expose:
+          - "8080"
+        depends_on:
+          - data-sourcing-service-db
+        <<: *uncritical-constants-env
+        environment:
+          DATA_SOURCING_SERVICE_DB_PASSWORD: ${DATA_SOURCING_SERVICE_DB_PASSWORD}
+          PROXY_PRIMARY_URL: ${PROXY_PRIMARY_URL:-local-dev.dataland.com}
+          DATALAND_DATA_SOURCING_SERVICE_CLIENT_SECRET: ${DATALAND_DATA_SOURCING_SERVICE_CLIENT_SECRET}
+        logging:
+          <<: *loki-logging
+  data-sourcing-service-db:
+        restart: always
+        profiles: [ "production", "testing", "development" ]
+        networks:
+          - data-sourcing-service-db
+        image: ghcr.io/d-fine/dataland/dataland_postgres_v1:${DATALAND_POSTGRES_V1_VERSION}
+        volumes:
+          - data_sourcing_service_data:/var/lib/postgresql/data
+        environment:
+          POSTGRES_DB: data_sourcing_service
+          POSTGRES_USER: data_sourcing_service
+          POSTGRES_PASSWORD: ${DATA_SOURCING_SERVICE_DB_PASSWORD}
+          PGUSER: data_sourcing_service
+        logging:
+          <<: *loki-logging
   document-manager:
     restart: always
     profiles: [ "production", "testing", "development" ]
@@ -349,6 +383,7 @@ services:
       KEYCLOAK_DATALAND_ADMIN_SALT: ${KEYCLOAK_DATALAND_ADMIN_SALT}
       DATALAND_BATCH_MANAGER_CLIENT_SECRET: ${DATALAND_BATCH_MANAGER_CLIENT_SECRET}
       DATALAND_API_KEY_MANAGER_CLIENT_SECRET: ${DATALAND_API_KEY_MANAGER_CLIENT_SECRET}
+      DATALAND_DATA_SOURCING_SERVICE_CLIENT_SECRET: ${DATALAND_DATA_SOURCING_SERVICE_CLIENT_SECRET}
       DATALAND_QA_SERVICE_CLIENT_SECRET: ${DATALAND_QA_SERVICE_CLIENT_SECRET}
       DATALAND_COMMUNITY_MANAGER_CLIENT_SECRET: ${DATALAND_COMMUNITY_MANAGER_CLIENT_SECRET}
       DATALAND_EMAIL_SERVICE_CLIENT_SECRET: ${DATALAND_EMAIL_SERVICE_CLIENT_SECRET}
@@ -374,6 +409,7 @@ services:
       - keycloak-db
       - backend-db
       - api-key-manager-db
+      - data-sourcing-service-db
       - internal
       - internal-storage-db
       - document-manager-db
@@ -390,6 +426,7 @@ services:
       KEYCLOAK_DB_PASSWORD: ${KEYCLOAK_DB_PASSWORD}
       BACKEND_DB_PASSWORD: ${BACKEND_DB_PASSWORD}
       API_KEY_MANAGER_DB_PASSWORD: ${API_KEY_MANAGER_DB_PASSWORD}
+      DATA_SOURCING_SERVICE_DB_PASSWORD: ${DATA_SOURCING_SERVICE_DB_PASSWORD}
       INTERNAL_STORAGE_DB_PASSWORD: ${INTERNAL_STORAGE_DB_PASSWORD}
       DOCUMENT_MANAGER_DB_PASSWORD: ${DOCUMENT_MANAGER_DB_PASSWORD}
       QA_SERVICE_DB_PASSWORD: ${QA_SERVICE_DB_PASSWORD}
@@ -739,6 +776,7 @@ networks:
   keycloak-db:
   backend-db:
   api-key-manager-db:
+  data-sourcing-service-db:
   internal-storage-db:
   document-manager-db:
   qa-service-db:
@@ -753,6 +791,8 @@ volumes:
   backend_data:
     driver: local
   api_key_manager_data:
+    driver: local
+  data_sourcing_service_data:
     driver: local
   internal_storage_data:
     driver: local
